# Flappy-Bird-Reborn

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp
assets/components/: CMakeLists.txt  DynamicComponent.cpp
assets/objects/json/: Bird.json  Pipe.json  PipeSpawner.json  Score.json
assets/objects/scripts/: Background.cpp  Background.hpp  Bird.cpp  Bird.hpp  Bird.lua  Pipes.cpp  Pipes.hpp  Score.cpp  Score.hpp  Score.lua
includes/StellarForge/common/fields/: ComponentField.hpp
includes/StellarForge/physics/: Box.hpp  Sphere.hpp
